Partial_14Dec2021/force-app/main/default/objects/Influencer__c/Influencer__c.object-meta.xml
<CustomObject>
    <label>Influencer</label>
    <nameField>
        <displayFormat>INF-{0000}</displayFormat>
        <label>Influencer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influencer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>