Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Contacts</value>
        </filterItems>
        <filterItems>
            <field>Account.Party_Type__c</field>
            <operation>equals</operation>
            <value>Architect, Contractor, Plumbing Contractor, Project Manager, Purchase Manager, Site Engineer, Project Owner/Developer, Plumbing Consultant, Consultant</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Influencer</relationshipLabel>
    <relationshipName>Influencer</relationshipName>
    <type>Lookup</type>
</CustomField>