Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Influencer</relationshipLabel>
    <relationshipName>Influencer</relationshipName>
    <type>Lookup</type>
</CustomField>