Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>Account__r.Firm_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>