Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <description>This formula takes value from Associated Account&apos;s Grading field and Populate it</description>
    <formula>TEXT( Account__r.Builder_grading__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grading</label>
    <type>Text</type>
</CustomField>