Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Inf_Order__c.field-meta.xml
<CustomField>
    <fullName>Inf_Order__c</fullName>
    <description>This field will store the order of influencer.</description>
    <label>Inf Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>