Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Influencer_Type__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Type__c</fullName>
    <label>Influencer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Project Owner/Developer/Builder</fullName>
            </value>
            <value>
                <fullName>Purchase Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Site Engineer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Plumbing Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>