Partial_14Dec2021/force-app/main/default/objects/Influencer__c/fields/Update_of_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Update_of_Last_Visit__c</fullName>
    <label>Update of Last Visit</label>
    <type>TextArea</type>
</CustomField>